--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,16 +10,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-  steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: "14" #You can specify any version you want
-    - run: npm install
-    - name: Set environment variables
-      run: |
-        echo "SECRET_MESSAGE=${{ secrets.SECRET_MESSAGE }}" >> $GITHUB_ENV
-    - run: npm test
-      env:
-        SECRET_MESSAGE: ${{ secrets.SECRET_MESSAGE }} # pass the secret to the test
+    strategy:
+      matrix:
+        node-version: [14, 16, 18] # Test on multiple Node.js versions
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm install
+
+      - name: Set environment variables
+        run: |
+          echo "SECRET_MESSAGE=${{ secrets.SECRET_MESSAGE }}" >> $GITHUB_ENV
+
+      - run: npm test
+        env:
+          SECRET_MESSAGE: ${{ secrets.SECRET_MESSAGE }} # pass the secret to the test
