--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [main]
+    branches: *
   pull_request:
-    branches: [main]
+    branches: *
 
 jobs:
   build:
@@ -26,3 +26,5 @@ jobs:
 
       - name: Run Tests
         run: npm test
+        env:
+          SECRET_MESSAGE: ${{ secrets.SECRET_MESSAGE }} # Pass the secret to the tests
